[tool.poetry]
name = "bloom-filter-btp"
version = "0.1.0"
description = ""
authors = ["Luís Henrique De Almeida Fernandes <luish.fernandes@usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.5"
opencv-python = "^4.8.1.78"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
